--- a/src/app/startpage/startpage.component.html
+++ b/src/app/startpage/startpage.component.html
@@ -1,4 +1,4 @@
-<mat-card class="example-card">
+<!-- <mat-card class="example-card">
   <mat-card-header>
     <div mat-card-avatar class="example-header-image"></div>
     <mat-card-title>Shiba Inu</mat-card-title>
@@ -16,4 +16,5 @@
     <button mat-button>LIKE</button>
     <button mat-button>SHARE</button>
   </mat-card-actions>
-</mat-card>
+</mat-card> -->
+<my-webcomponent number-a="7" number-b="38"></my-webcomponent>
